fix text align

--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -37,7 +37,6 @@ h3 {
     align-items: center;
     justify-content: center;
     margin-bottom: 16px;
-    text-align: center;
 }
 
 .author-name {
